@@ -2,6 +2,12 @@
     <dependencies>
         <dependency>
             <groupId>maven</groupId>
+            <artifactId>cc-maven-test-noversion</artifactId>
+            <type>jar</type>
+            <jar>cc-maven-test-noversion.jar</jar>
+        </dependency>
+        <dependency>
+            <groupId>maven</groupId>
             <artifactId>cc-maven-test</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
